executable('png2pnm',
           'png2pnm.c',
           include_directories: ut_include,
           link_with: ut_lib)

executable('x11',
           'x11.c',
           include_directories: ut_include,
           link_with: ut_lib)

executable('wayland',
           'wayland.c',
           include_directories: ut_include,
           link_with: ut_lib)
