ut_sources = [
  'dbus/ut-dbus-array.c',
  'dbus/ut-dbus-auth-client.c',
  'dbus/ut-dbus-auth-server.c',
  'dbus/ut-dbus-client.c',
  'dbus/ut-dbus-dict.c',
  'dbus/ut-dbus-error.c',
  'dbus/ut-dbus-message.c',
  'dbus/ut-dbus-message-decoder.c',
  'dbus/ut-dbus-message-encoder.c',
  'dbus/ut-dbus-object-path.c',
  'dbus/ut-dbus-server.c',
  'dbus/ut-dbus-signature.c',
  'dbus/ut-dbus-struct.c',
  'dbus/ut-dbus-variant.c',
  'deflate/ut-deflate-decoder.c',
  'deflate/ut-deflate-encoder.c',
  'deflate/ut-deflate-error.c',
  'dns/ut-dns-client.c',
  'gzip/ut-gzip-decoder.c',
  'gzip/ut-gzip-encoder.c',
  'gzip/ut-gzip-error.c',
  'http/ut-http-client.c',
  'http/ut-http-error.c',
  'http/ut-http-header.c',
  'http/ut-http-response.c',
  'huffman/ut-huffman-code.c',
  'huffman/ut-huffman-decoder.c',
  'huffman/ut-huffman-encoder.c',
  'png/ut-png-decoder.c',
  'png/ut-png-encoder.c',
  'png/ut-png-error.c',
  'png/ut-png-image.c',
  'jpeg/ut-jpeg.c',
  'jpeg/ut-jpeg-decoder.c',
  'jpeg/ut-jpeg-encoder.c',
  'jpeg/ut-jpeg-error.c',
  'jpeg/ut-jpeg-image.c',
  'json/ut-json.c',
  'json/ut-json-encoder.c',
  'lzw/ut-lzw-decoder.c',
  'lzw/ut-lzw-encoder.c',
  'lzw/ut-lzw-error.c',
  'tiff/ut-tiff-error.c',
  'tiff/ut-tiff-image.c',
  'tiff/ut-tiff-reader.c',
  'tiff/ut-tiff-tag.c',
  'ut-assert.c',
  'ut-base64.c',
  'ut-bit-list.c',
  'ut-boolean.c',
  'ut-buffered-input-stream.c',
  'ut-cancel.c',
  'ut-color.c',
  'ut-constant-utf8-string.c',
  'ut-constant-uint8-array.c',
  'ut-cstring.c',
  'ut-drawable.c',
  'ut-event-loop.c',
  'ut-error.c',
  'ut-fd-input-stream.c',
  'ut-fd-output-stream.c',
  'ut-file.c',
  'ut-file-descriptor.c',
  'ut-float32.c',
  'ut-float32-array.c',
  'ut-float32-list.c',
  'ut-float64.c',
  'ut-float64-array.c',
  'ut-float64-list.c',
  'ut-general-error.c',
  'ut-hash-table.c',
  'ut-image-buffer.c',
  'ut-input-stream.c',
  'ut-int16.c',
  'ut-int16-array.c',
  'ut-int16-list.c',
  'ut-int16-subarray.c',
  'ut-int32.c',
  'ut-int32-array.c',
  'ut-int32-list.c',
  'ut-int32-subarray.c',
  'ut-int64.c',
  'ut-int64.c',
  'ut-int64-array.c',
  'ut-int64-list.c',
  'ut-int64-subarray.c',
  'ut-ip-address.c',
  'ut-ip-address-resolver.c',
  'ut-ipv4-address.c',
  'ut-ipv6-address.c',
  'ut-list.c',
  'ut-list-input-stream.c',
  'ut-local-file.c',
  'ut-map.c',
  'ut-map-item.c',
  'ut-memory-mapped-file.c',
  'ut-null.c',
  'ut-object.c',
  'ut-object-array.c',
  'ut-object-list.c',
  'ut-output-stream.c',
  'ut-rgba8888-buffer.c',
  'ut-shared-memory-array.c',
  'ut-shared-memory-subarray.c',
  'ut-string.c',
  'ut-string-array.c',
  'ut-string-list.c',
  'ut-string-subarray.c',
  'ut-tcp-server-socket.c',
  'ut-tcp-socket.c',
  'ut-udp-datagram.c',
  'ut-udp-socket.c',
  'ut-uint16.c',
  'ut-uint16-array.c',
  'ut-uint16-list.c',
  'ut-uint16-subarray.c',
  'ut-uint256.c',
  'ut-uint8.c',
  'ut-uint8-array.c',
  'ut-uint8-array-with-fds.c',
  'ut-uint8-list.c',
  'ut-uint8-subarray.c',
  'ut-uint32.c',
  'ut-uint32-array.c',
  'ut-uint32-list.c',
  'ut-uint32-subarray.c',
  'ut-uint64.c',
  'ut-uint64-array.c',
  'ut-uint64-list.c',
  'ut-uint64-subarray.c',
  'ut-unix-socket-address.c',
  'ut-utf16-decoder.c',
  'ut-utf16-encoder.c',
  'ut-utf8-decoder.c',
  'ut-utf8-encoder.c',
  'ut-utf8-string.c',
  'ut-writable-input-stream.c',
  'wayland/ut-wayland-buffer.c',
  'wayland/ut-wayland-callback.c',
  'wayland/ut-wayland-client.c',
  'wayland/ut-wayland-compositor.c',
  'wayland/ut-wayland-decoder.c',
  'wayland/ut-wayland-display.c',
  'wayland/ut-wayland-encoder.c',
  'wayland/ut-wayland-keyboard.c',
  'wayland/ut-wayland-object.c',
  'wayland/ut-wayland-output.c',
  'wayland/ut-wayland-pointer.c',
  'wayland/ut-wayland-region.c',
  'wayland/ut-wayland-registry.c',
  'wayland/ut-wayland-seat.c',
  'wayland/ut-wayland-shm.c',
  'wayland/ut-wayland-shm-pool.c',
  'wayland/ut-wayland-surface.c',
  'wayland/ut-wayland-touch.c',
  'wayland/ut-xdg-popup.c',
  'wayland/ut-xdg-positioner.c',
  'wayland/ut-xdg-surface.c',
  'wayland/ut-xdg-toplevel.c',
  'wayland/ut-xdg-wm-base.c',
  'x11/ut-x11-big-requests-extension.c',
  'x11/ut-x11-buffer.c',
  'x11/ut-x11-button-class.c',
  'x11/ut-x11-client.c',
  'x11/ut-x11-core.c',
  'x11/ut-x11-dri3-extension.c',
  'x11/ut-x11-error.c',
  'x11/ut-x11-extension.c',
  'x11/ut-x11-generic-event-extension.c',
  'x11/ut-x11-input-device-info.c',
  'x11/ut-x11-input-event-mask.c',
  'x11/ut-x11-key-class.c',
  'x11/ut-x11-pixmap-format.c',
  'x11/ut-x11-present-extension.c',
  'x11/ut-x11-randr-extension.c',
  'x11/ut-x11-rectangle.c',
  'x11/ut-x11-screen.c',
  'x11/ut-x11-scroll-class.c',
  'x11/ut-x11-shape-extension.c',
  'x11/ut-x11-shm-extension.c',
  'x11/ut-x11-sync-extension.c',
  'x11/ut-x11-touch-class.c',
  'x11/ut-x11-unknown-input-class.c',
  'x11/ut-x11-valuator-class.c',
  'x11/ut-x11-visual.c',
  'x11/ut-x11-xfixes-extension.c',
  'x11/ut-x11-xinput-extension.c',
  'xml/ut-xml-document.c',
  'xml/ut-xml-element.c',
  'zlib/ut-zlib-decoder.c',
  'zlib/ut-zlib-encoder.c',
  'zlib/ut-zlib-error.c'
]

ut_include = include_directories('.')

ut_lib = static_library('ut', ut_sources, dependencies: [m_dep, thread_dep, rt_dep])

object_test = executable('ut-object-test',
                         'ut-object-test.c',
                         link_with: ut_lib)
test('Object', object_test)

cstring_test = executable('ut-cstring-test',
                          'ut-cstring-test.c',
                          link_with: ut_lib)
test('C String', cstring_test)

uint256_test = executable('ut-uint256-test',
                          'ut-uint256-test.c',
                          link_with: ut_lib)
test('Uint256', uint256_test)

uint8_array_test = executable('ut-uint8-array-test',
                              'ut-uint8-array-test.c',
                              link_with: ut_lib)
test('Uint8 Array', uint8_array_test)

uint16_array_test = executable('ut-uint16-array-test',
                               'ut-uint16-array-test.c',
                               link_with: ut_lib)
test('Uint16 Array', uint16_array_test)

int16_array_test = executable('ut-int16-array-test',
                               'ut-int16-array-test.c',
                               link_with: ut_lib)
test('Int16 Array', int16_array_test)

uint32_array_test = executable('ut-uint32-array-test',
                               'ut-uint32-array-test.c',
                               link_with: ut_lib)
test('Uint32 Array', uint32_array_test)

int32_array_test = executable('ut-int32-array-test',
                               'ut-int32-array-test.c',
                               link_with: ut_lib)
test('Int32 Array', int32_array_test)

uint64_array_test = executable('ut-uint64-array-test',
                               'ut-uint64-array-test.c',
                               link_with: ut_lib)
test('Uint64 Array', uint64_array_test)

int64_array_test = executable('ut-int64-array-test',
                               'ut-int64-array-test.c',
                               link_with: ut_lib)
test('Int64 Array', int64_array_test)

float32_array_test = executable('ut-float32-array-test',
                                'ut-float32-array-test.c',
                                link_with: ut_lib)
test('Float32 Array', float32_array_test)

float64_array_test = executable('ut-float64-array-test',
                                'ut-float64-array-test.c',
                                link_with: ut_lib)
test('Float64 Array', float64_array_test)

bit_list_test = executable('ut-bit-list-test',
                           'ut-bit-list-test.c',
                           link_with: ut_lib)
test('Bit list', bit_list_test)

map_test = executable('ut-map-test',
                      'ut-map-test.c',
                      link_with: ut_lib)
test('Map', map_test)

string_test = executable('ut-string-test',
                              'ut-string-test.c',
                              link_with: ut_lib)
test('String', string_test)

const_utf8_string_test = executable('ut-constant-utf8-string-test',
                                    'ut-constant-utf8-string-test.c',
                                    link_with: ut_lib)
test('Constant String', const_utf8_string_test)

shared_memory_array_test = executable('ut-shared-memory-array-test',
                              'ut-shared-memory-array-test.c',
                              link_with: ut_lib)
test('Shared Memory Array', shared_memory_array_test)

base64_test = executable('ut-base64-test',
                         'ut-base64-test.c',
                         link_with: ut_lib)
test('Base64', base64_test)

utf8_decoder_test = executable('ut-utf8-decoder-test',
                               'ut-utf8-decoder-test.c',
                               link_with: ut_lib)
test('UTF-8 Decoder', utf8_decoder_test)

utf16_decoder_test = executable('ut-utf16-decoder-test',
                                'ut-utf16-decoder-test.c',
                                link_with: ut_lib)
test('UTF-16 Decoder', utf16_decoder_test)

utf8_encoder_test = executable('ut-utf8-encoder-test',
                               'ut-utf8-encoder-test.c',
                               link_with: ut_lib)
test('UTF-8 Encoder', utf8_encoder_test)

utf16_encoder_test = executable('ut-utf16-encoder-test',
                                'ut-utf16-encoder-test.c',
                                link_with: ut_lib)
test('UTF-16 Encoder', utf16_encoder_test)

xml_document_test = executable('ut-xml-document-test',
                               'xml/ut-xml-document-test.c',
                               link_with: ut_lib)
test('XML', xml_document_test)

json_test = executable('ut-json-test',
                       'json/ut-json-test.c',
                       link_with: ut_lib)
test('JSON', json_test)

huffman_decoder_test = executable('ut-huffman-decoder-test',
                                  'huffman/ut-huffman-decoder-test.c',
                                  link_with: ut_lib)
test('Huffman Decoder', huffman_decoder_test)

huffman_encoder_test = executable('ut-huffman-encoder-test',
                                  'huffman/ut-huffman-encoder-test.c',
                                  link_with: ut_lib)
test('Huffman Encoder', huffman_encoder_test)

deflate_decoder_test = executable('ut-deflate-decoder-test',
                                  'deflate/ut-deflate-decoder-test.c',
                                  link_with: ut_lib)
test('Deflate Decoder', deflate_decoder_test)

deflate_encoder_test = executable('ut-deflate-encoder-test',
                                  'deflate/ut-deflate-encoder-test.c',
                                  link_with: ut_lib)
test('Deflate Encoder', deflate_encoder_test)

lzw_decoder_test = executable('ut-lzw-decoder-test',
                              'lzw/ut-lzw-decoder-test.c',
                              link_with: ut_lib)
test('LZW Decoder', lzw_decoder_test)

lzw_encoder_test = executable('ut-lzw-encoder-test',
                              'lzw/ut-lzw-encoder-test.c',
                              link_with: ut_lib)
test('LZW Encoder', lzw_encoder_test)

zlib_decoder_test = executable('ut-zlib-decoder-test',
                               'zlib/ut-zlib-decoder-test.c',
                               link_with: ut_lib)
test('zlib Decoder', zlib_decoder_test)

zlib_encoder_test = executable('ut-zlib-encoder-test',
                               'zlib/ut-zlib-encoder-test.c',
                               link_with: ut_lib)
test('zlib Encoder', zlib_encoder_test)

gzip_decoder_test = executable('ut-gzip-decoder-test',
                               'gzip/ut-gzip-decoder-test.c',
                               link_with: ut_lib)
test('GZip Decoder', gzip_decoder_test)

gzip_encoder_test = executable('ut-gzip-encoder-test',
                               'gzip/ut-gzip-encoder-test.c',
                               link_with: ut_lib)
test('GZip Encoder', gzip_encoder_test)

tiff_reader_test = executable('ut-tiff-reader-test',
                               'tiff/ut-tiff-reader-test.c',
                               link_with: ut_lib)
test('TIFF Reader', tiff_reader_test)

tiff_image_test = executable('ut-tiff-image-test',
                             'tiff/ut-tiff-image-test.c',
                             link_with: ut_lib)
test('TIFF Image', tiff_image_test)

png_image_test = executable('ut-png-image-test',
                            'png/ut-png-image-test.c',
                            link_with: ut_lib)
test('PNG Image', png_image_test)

png_decoder_test = executable('ut-png-decoder-test',
                              'png/ut-png-decoder-test.c',
                              link_with: ut_lib)
test('PNG Decoder', png_decoder_test)

png_encoder_test = executable('ut-png-encoder-test',
                              'png/ut-png-encoder-test.c',
                              link_with: ut_lib)
test('PNG Encoder', png_encoder_test)

jpeg_decoder_test = executable('ut-jpeg-decoder-test',
                              'jpeg/ut-jpeg-decoder-test.c',
                              link_with: ut_lib)
test('JPEG Decoder', jpeg_decoder_test)

jpeg_encoder_test = executable('ut-jpeg-encoder-test',
                              'jpeg/ut-jpeg-encoder-test.c',
                              link_with: ut_lib)
test('JPEG Encoder', jpeg_encoder_test)

event_loop_test = executable('ut-event-loop-test',
                             'ut-event-loop-test.c',
                             link_with: ut_lib)
#test('Event Loop', event_loop_test)

local_file_test = executable('ut-local-file-test',
                             'ut-local-file-test.c',
                             link_with: ut_lib)
#test('Local File', local_file_test)

memory_mapped_file_test = executable('ut-memory-mapped-file-test',
                                     'ut-memory-mapped-file-test.c',
                                     link_with: ut_lib)
#test('Memory Mapped File', memory_mapped_file_test)

ipv4_address_test = executable('ut-ipv4-address-test',
                               'ut-ipv4-address-test.c',
                               link_with: ut_lib)
test('IPv4 Address', ipv4_address_test)

ipv6_address_test = executable('ut-ipv6-address-test',
                               'ut-ipv6-address-test.c',
                               link_with: ut_lib)
test('IPv6 Address', ipv6_address_test)

ip_address_resolver_test = executable('ut-ip-address-resolver-test',
                                      'ut-ip-address-resolver-test.c',
                                      link_with: ut_lib)
#test('IP Address Resolver', ip_address_resolver_test)

dns_client_test = executable('ut-dns-client-test',
                              'dns/ut-dns-client-test.c',
                              link_with: ut_lib)
test('DNS Client', dns_client_test)

http_client_test = executable('ut-http-client-test',
                              'http/ut-http-client-test.c',
                              link_with: ut_lib)
test('HTTP Client', http_client_test)

tcp_socket_test = executable('ut-tcp-socket-test',
                             'ut-tcp-socket-test.c',
                             link_with: ut_lib)
test('TCP Socket', tcp_socket_test)

tcp_socket_unix_test = executable('ut-tcp-socket-unix-test',
                                  'ut-tcp-socket-unix-test.c',
                                  link_with: ut_lib)
test('Unix TCP Socket', tcp_socket_unix_test)

udp_socket_test = executable('ut-udp-socket-test',
                             'ut-udp-socket-test.c',
                             link_with: ut_lib)
test('UDP Socket', udp_socket_test)

dbus_message_encoder_test = executable('ut-dbus-message-encoder-test',
                                       'dbus/ut-dbus-message-encoder-test.c',
                                       link_with: ut_lib)
test('DBus Message Encoder', dbus_message_encoder_test)

dbus_client_test = executable('ut-dbus-client-test',
                             'dbus/ut-dbus-client-test.c',
                             link_with: ut_lib)
test('DBus Client', dbus_client_test)

drawable_test = executable('ut-drawable-test',
                           'ut-drawable-test.c',
                           link_with: ut_lib)
#test('Drawable', drawable_test)
